2011-01-19  Sancho lerena <slerena@artica.es>

	* operation/incidents/incident_detail.php: Fixed the problem
	with the "blank" group/creator on non-admin user editing.

	* operation/incidents/incident_search.php: Added a new icon
	on incidents pending to reply.

2010-12-21  Sancho Lerena <slerena@artica.es>

	* operation/users/user_workunit_report.php: Fixed a weird
	problem with SQL HTML encoding ¿?¿?¿?.

	* godmode/setup/logviewer.php: Add a link to delete logfile.

2010-12-20  Sancho Lerena <slerena@artica.es>

	* operation/projects/project_group_detail.php,
	operation/projects/project.php,
	operation/user_report/report_monthly.php: Fixed some ACL on 
	project management and people reporting.

2010-11-19  Sancho Lerena <slerena@artica.es>

	* include/functions.php: Fixing problems with HTML encoding.
	Ported functions from Pandora FMS project.

	* integria_db.sql: Fixed some problems on user deletion due
	foreign keys.

	* integria_demo.sql: Updated some SQL not working with the latest  
    changes on SLA and Session tables.


2010-11-18  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control,
	DEBIAN/make_deb_package.sh: Changes to do the DEB packages better.

	* integria.spec: Same for RPM files.

	* extras/build_src.sh,
	extras/build_deb.sh,
	extras/build_rpm.sh: Automated scripts for doing the packaging.

2010-11-04  Sancho Lerena <slerena@artica.es>

	* operation/incidents/incident_detail.php: Fixed creator on non-admin
	users, was missing on incident creation ! :-o

2010-11-03  Sancho Lerena <slerena@artica.es>

	* operation/incidents/incident_detail.php: Fixed creator insert/update
	operations.

2010-10-25  Sancho Lerena <slerena@artica.es>

    * setup/audit.php: A page for reviewing audit records was missing, added.

    * integria_db.sql: Added new fields for SLA (on labour week, and hourly 
    limits for the SLA. Added extra info field for audit records (to store SQL).

    * update.sql: See above.
